setup loader and material dialog fixing

--- a/src/app/components/channel-dialog/channel-dialog.component.html
+++ b/src/app/components/channel-dialog/channel-dialog.component.html
@@ -6,6 +6,6 @@
     </mat-form-field>
 </mat-dialog-content>
 <mat-dialog-actions align="end">
-    <button mat-button (click)="dialogRef.close()">Cancel</button>
+    <button mat-button (click)="closeDialog()">Cancel</button>
     <button mat-button color="primary" (click)="addChannel()" [disabled]="!channelName">Add</button>
 </mat-dialog-actions>
