--- a/src/app/components/user-list/user-list.component.html
+++ b/src/app/components/user-list/user-list.component.html
@@ -1,12 +1,7 @@
 <aside class="user-list" [class.user-list-open]="isOpen">
     <div class="user-list-header">
         <h2>Online Users</h2>
-        <button class="close-button" (click)="close.emit()" aria-label="Close user list">
-            <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none"
-                stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-                <line x1="18" y1="6" x2="6" y2="18"></line>
-                <line x1="6" y1="6" x2="18" y2="18"></line>
-            </svg>
+        <button class="close-button fa-solid fa-xmark" (click)="close.emit()" aria-label="Close user list">
         </button>
     </div>
 
