--- a/src/styles.scss
+++ b/src/styles.scss
@@ -87,21 +87,6 @@ app-root {
     height: 100%;
 }
 
-.cdk-overlay-container {
-    position: fixed !important;
-    top: 0;
-    left: 0;
-    width: 100vw;
-    height: 100vh;
-    // pointer-events: none;
-    z-index: 1000;
-}
-
-.mat-mdc-form-field {
-    input {
-        height: 50px !important;
-    }
-}
 
 html,
 body {
@@ -287,3 +272,15 @@ select:focus {
         display: block;
     }
 }
+
+html,
+body {
+    height: 100%;
+}
+
+body {
+    margin: 0;
+    font-family: Roboto, "Helvetica Neue", sans-serif;
+}
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
