--- a/src/app/components/channel-dialog/channel-dialog.component.scss
+++ b/src/app/components/channel-dialog/channel-dialog.component.scss
@@ -1,7 +1,7 @@
-::ng-deep .mat-mdc-text-field-wrapper .mat-mdc-form-field-flex .mat-mdc-floating-label label {
-    top: 0px !important;
-}
+// ::ng-deep .mat-mdc-text-field-wrapper .mat-mdc-form-field-flex .mat-mdc-floating-label label {
+//     top: 0px !important;
+// }
 
-::ng-deep .mat-mdc-form-field label {
-    top: 24px !important;
-}
+// ::ng-deep .mat-mdc-form-field label {
+//     top: 24px !important;
+// }
