--- a/src/app/components/sidebar/sidebar.component.scss
+++ b/src/app/components/sidebar/sidebar.component.scss
@@ -91,6 +91,9 @@
     }
 
     .rooms-section {
+        display: flex;
+        flex-direction: column;
+        row-gap: 9px;
         flex: 1;
         padding: var(--space-4);
         margin-bottom: var(--space-4);
