--- a/src/app/components/message-list/message-list.component.html
+++ b/src/app/components/message-list/message-list.component.html
@@ -1,4 +1,4 @@
-<div class="message-list-container" #messageContainer>
+<div class="message-list-container">
     <div class="message-list-content">
         <div class="message-list-empty" *ngIf="messages.length === 0">
             <div class="empty-state">
@@ -7,7 +7,8 @@
                     <path d="M21 15a2 2 0 0 1-2 2H7l-4 4V5a2 2 0 0 1 2-2h14a2 2 0 0 1 2 2z"></path>
                 </svg>
                 <h3>No messages yet</h3>
-                <p>Be the first to start the conversation!</p>
+                <p>Be the first to sta
+                    rt the conversation!</p>
             </div>
         </div>
 
