login and sign integrate and set authGuard

--- a/src/app/components/emoji-dialog/emoji-dialog.component.scss
+++ b/src/app/components/emoji-dialog/emoji-dialog.component.scss
@@ -1,3 +1,10 @@
 emoji-picker {
     width: 100%;
 }
+
+::ng-deep .emoji-dialog {
+    width: 350px !important;
+    position: absolute !important;
+    bottom: 16% !important;
+    right: 20% !important;
+}
