--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
 <router-outlet></router-outlet>
-<!-- <div class="main">
+<div class="main" *ngIf="service.loading">
     <app-loader></app-loader>
-</div> -->
+</div>
