--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -13,7 +13,7 @@
             <span class="status-indicator" [class.online]="currentUser?.status === 'online'"></span>
         </div>
         <div class="user-info">
-            <h3>{{ currentUser?.name }}</h3>
+            <h3>{{ currentUser?.username }}</h3>
             <span class="user-status">{{ currentUser?.status }}</span>
         </div>
     </div>
