--- a/src/app/pages/chat/chat.component.html
+++ b/src/app/pages/chat/chat.component.html
@@ -13,18 +13,19 @@
             </button>
 
             <div class="room-info">
-                <h2>{{ activeRoomName }}</h2>
+                <h2>{{ activeRoomName | capitalize }}</h2>
                 <span class="online-count">{{ onlineUsers.length }} online</span>
             </div>
         </header>
 
         <div class="chat-section">
             <!-- Messages area -->
-            <app-message-list [messages]="messages" [currentUserId]="currentUser?.id || ''"></app-message-list>
+            <app-message-list [messages]="messages" [currentUserId]="currentUser?.id || ''"
+                [typingUser]="typingUser"></app-message-list>
 
             <!-- Message input -->
             <!-- <app-message-input (messageSent)="sendMessage($event)" (userTyping)="handleTyping()"></app-message-input> -->
-            <app-message-input (messageSent)="sendMessage($event)"></app-message-input>
+            <app-message-input (messageSent)="sendMessage($event)" (userTyping)="handleTyping()"></app-message-input>
         </div>
 
     </main>
